--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Студия</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
@@ -12,13 +16,12 @@
 		<!-- Верхняя лінія -->
 		<header class="page-header">
 			<nav>
-				<a href="./index.html" class="logo link">
-					<span class="logo-web">Web</span>
-					Studio
-				</a>
+				<pre><a href="./index.html" class="logo link" lang="en">
+					<span class="logo-web">Web</span>Studio
+				</a></pre>
 
 				<ul class="site-nav list">
-					<li><a href="" class="link current">Студия</a></li>
+					<li><a href="./index.html" class="link current">Студия</a></li>
 					<li><a href="./portfolio.html" class="link">Портфолио</a></li>
 					<li><a href="" class="link">Контакты</a></li>
 				</ul>
@@ -49,19 +52,19 @@
 				<ul class="feature-list list">
 					<li>
 						<h3 class="title">Внимание к деталям</h3>
-						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+						<p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 					<li>
 						<h3 class="title">Пунктуальность</h3>
-						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						<p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 					</li>
 					<li>
 						<h3 class="title">Планирование</h3>
-						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						<p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 					</li>
 					<li>
 						<h3 class="title">Современные технологии</h3>
-						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						<p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 					</li>
 				</ul>
 			</section>
@@ -85,26 +88,26 @@
 			<!-- Наша команда -->
 			<section class="section">
 				<h2 class="section-title">Наша команда</h2>
-				<ul class="list">
+				<ul class="list team-list">
 					<li>
 						<img src="./image/team/team-1.jpg" alt="Фото Игоря Демьяненко" width="270" />
-						<h4 class="title">Игорь Демьяненко</h4>
-						<p>Product Designer</p>
+						<h3 class="title">Игорь Демьяненко</h3>
+						<p class="text" lang="en">Product Designer</p>
 					</li>
 					<li>
 						<img src="./image/team/team-2.jpg" alt="Фото Ольги Репиной" width="270" />
-						<h4 class="title">Ольга Репина</h4>
-						<p>Frontend Developer</p>
+						<h3 class="title">Ольга Репина</h3>
+						<p class="text" lang="en">Frontend Developer</p>
 					</li>
 					<li>
 						<img src="./image/team/team-3.jpg" alt="Фото Николая Тарасова" width="270" />
-						<h4 class="title">Николай Тарасов</h4>
-						<p>Marketing</p>
+						<h3 class="title">Николай Тарасов</h3>
+						<p class="text" lang="en">Marketing</p>
 					</li>
 					<li>
 						<img src="./image/team/team-4.jpg" alt="Фото Михаила Ермакова" width="270" />
-						<h4 class="title">Михаил Ермаков</h4>
-						<p>UI Designer</p>
+						<h3 class="title">Михаил Ермаков</h3>
+						<p class="text" lang="en">UI Designer</p>
 					</li>
 				</ul>
 			</section>
@@ -112,16 +115,16 @@
 
 		<!-- Подвал -->
 		<footer>
-			<a href="./index.html" class="logo link">
-				<span class="logo-web">Web</span>
-				Studio
-			</a>
+			<pre><a href="./index.html" class="logo link" lang="en">
+				<span class="logo-web">Web</span>Studio
+			</a></pre>
 
-			<address class="link">г. Киев, пр-т Леси Украинки, 26</address>
-
-			<address class="auth-nav list">
-				<p><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></p>
-				<p><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></p>
+			<address class="f-bar list link">
+				<ul class="list">
+					<li><a href="" class="link address">г. Киев, пр-т Леси Украинки, 26</a></li>
+					<li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
+				</ul>
 			</address>
 		</footer>
 	</body>
