--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Portfolio</title>
+		<title>Студия</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
@@ -12,14 +16,13 @@
 		<!-- Верхняя лінія -->
 		<header class="page-header">
 			<nav>
-				<a href="./index.html" class="logo">
-					<span class="logo-web">Web</span>
-					Studio
-				</a>
+				<pre><a href="./index.html" class="logo link" lang="en">
+					<span class="logo-web">Web</span>Studio
+				</a></pre>
 
 				<ul class="site-nav list">
 					<li><a href="./index.html" class="link">Студия</a></li>
-					<li><a href="./portfolio.html" class="link">Портфолио</a></li>
+					<li><a href="./portfolio.html" class="link current">Портфолио</a></li>
 					<li><a href="" class="link">Контакты</a></li>
 				</ul>
 			</nav>
@@ -35,66 +38,83 @@
 			<!-- Filtr -->
 			<section class="filter">
 				<h3>Фильтр</h3>
-				<ul class="filter-nav list">
-					<li>
-						<button type="button" class="button">Все</button>
-					</li>
-					<li><button type="button" class="button">Веб-сайты</button></li>
-					<li><button type="button" class="button">Приложения</button></li>
-					<li><button type="button" class="button">Дизайн</button></li>
-					<li><button type="button" class="button">Маркетинг</button></li>
-				</ul>
+				<!-- <ul class="filter-nav list"> -->
+
+				<button type="button" class="button">Все</button>
+				<button type="button" class="button">Веб-сайты</button>
+				<button type="button" class="button">Приложения</button>
+				<button type="button" class="button">Дизайн</button>
+				<button type="button" class="button">Маркетинг</button>
+				<!-- </ul> -->
 			</section>
 
 			<!-- Примеры работ -->
 			<section>
-				<h2>Примеры работ</h2>
+				<h1>Примеры работ</h1>
 
 				<ul class="work-list list">
 					<li>
-						<img src="./image/portfolio/img-4.jpg" alt="Веб-сайт компании Технокряк" width="270" />
+						<img src="./image/portfolio/img-4.jpg" alt="Веб-сайт компании Технокряк" width="370" height="295" />
 						<h4 class="title">Технокряк</h4>
-						<p>Веб-сайт</p>
+						<p class="text">Веб-сайт</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-5.jpg" alt="Постер с баскетболистами" width="270" />
-						<h4 class="title">Постер New Orlean vs Golden Star</h4>
-						<p>Дизайнr</p>
+						<img src="./image/portfolio/img-5.jpg" alt="Постер с баскетболистами" width="370" height="295" />
+						<h4 class="title">
+							Постер
+							<span lang="en">New Orlean vs Golden Star</span>
+						</h4>
+						<p class="text">Дизайн</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-6.jpg" alt="Логотип ресторана Seafood" width="270" />
-						<h4 class="title">Ресторан Seafood</h4>
-						<p>Приложение</p>
+						<img src="./image/portfolio/img-6.jpg" alt="Логотип ресторана Seafood" width="370" height="295" />
+						<h4 class="title">
+							Ресторан
+							<span lang="en">Seafood</span>
+						</h4>
+						<p class="text">Приложение</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-7.jpg" alt="Фото наушников" width="270" />
-						<h4 class="title">Проект Prime</h4>
-						<p>Маркетинг</p>
+						<img src="./image/portfolio/img-7.jpg" alt="Фото наушников" width="370" height="295" />
+						<h4 class="title">
+							Проект
+							<span lang="en">Prime</span>
+						</h4>
+						<p class="text">Маркетинг</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-8.jpg" alt="Фото Игоря Демьяненко" width="270" />
-						<h4 class="title">Проект Boxes</h4>
-						<p>Приложение</p>
+						<img src="./image/portfolio/img-8.jpg" alt="Фото коробок" width="370" height="295" />
+						<h4 class="title">
+							Проект
+							<span lang="en">Boxes</span>
+						</h4>
+						<p class="text">Приложение</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-9.jpg" alt="Фото Ольги Репиной" width="270" />
-						<h4 class="title">Inspiration has no Borders</h4>
-						<p>Веб-сайт</p>
+						<img src="./image/portfolio/img-9.jpg" alt="Фото монитора с открытым сайтом" width="370" height="295" />
+						<h4 class="title" lang="en">Inspiration has no Borders</h4>
+						<p class="text">Веб-сайт</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-10.jpg" alt="Фото Николая Тарасова" width="270" />
-						<h4 class="title">Издание Limited Edition</h4>
-						<p>Дизайн</p>
+						<img src="./image/portfolio/img-10.jpg" alt="Журнал Limited Edition" width="370" height="295" />
+						<h4 class="title">
+							Издание
+							<span lang="en">Limited Edition</span>
+						</h4>
+						<p class="text">Дизайн</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-11.jpg" alt="Фото Михаила Ермакова" width="270" />
-						<h4 class="title">Проект LAB</h4>
-						<p>Маркетинг</p>
+						<img src="./image/portfolio/img-11.jpg" alt="Ярлык с дизайном логотипа" width="370" height="295" />
+						<h4 class="title">
+							Проект
+							<span lang="en">LAB</span>
+						</h4>
+						<p class="text">Маркетинг</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-12.jpg" alt="Фото Михаила Ермакова" width="270" />
-						<h4 class="title">Growing Business</h4>
-						<p>Приложение</p>
+						<img src="./image/portfolio/img-12.jpg" alt="Работа за ноутбуком" width="370" height="295" />
+						<h4 class="title" lang="en">Growing Business</h4>
+						<p class="text">Приложение</p>
 					</li>
 				</ul>
 			</section>
@@ -102,16 +122,16 @@
 
 		<!-- Подвал -->
 		<footer>
-			<a href="./index.html">
-				Web
-				<span>Studio</span>
-			</a>
+			<pre><a href="./index.html" class="logo link" lang="en">
+				<span class="logo-web">Web</span>Studio
+			</a></pre>
 
-			<address>г. Киев, пр-т Леси Украинки, 26</address>
-
-			<address>
-				<p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-				<p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+			<address class="f-bar list link">
+				<ul class="list">
+					<li><a href="" class="link address">г. Киев, пр-т Леси Украинки, 26</a></li>
+					<li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
+				</ul>
 			</address>
 		</footer>
 	</body>
