--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
 		<!-- Верхняя лінія -->
 		<header class="page-header">
 			<nav>
-				<pre><a href="./index.html" class="logo link" lang="en">
-					<span class="logo-web">Web</span>Studio
-				</a></pre>
+				<a href="./index.html" class="logo link" lang="en">
+					<span class="logo-web">Web</span>
+					<span logo-header>Studio</span>
+				</a>
 
-				<ul class="site-nav list">
+				<ul class="site-nav list link">
 					<li><a href="./index.html" class="link current">Студия</a></li>
 					<li><a href="./portfolio.html" class="link">Портфолио</a></li>
 					<li><a href="" class="link">Контакты</a></li>
 				</ul>
 			</nav>
 
-			<ul class="auth-nav list">
+			<ul class="auth-nav list link">
 				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
 				<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 			</ul>
@@ -46,24 +47,24 @@
 			</section>
 
 			<!-- Особенности -->
-			<section class="section">
+			<section class="section feature">
 				<h2 class="section-title">Особенности</h2>
 
 				<ul class="feature-list list">
 					<li>
-						<h3 class="title">Внимание к деталям</h3>
+						<h3 class="feature-title">Внимание к деталям</h3>
 						<p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 					<li>
-						<h3 class="title">Пунктуальность</h3>
+						<h3 class="feature-title">Пунктуальность</h3>
 						<p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 					</li>
 					<li>
-						<h3 class="title">Планирование</h3>
+						<h3 class="feature-title">Планирование</h3>
 						<p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 					</li>
 					<li>
-						<h3 class="title">Современные технологии</h3>
+						<h3 class="feature-title">Современные технологии</h3>
 						<p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 					</li>
 				</ul>
@@ -86,40 +87,41 @@
 			</section>
 
 			<!-- Наша команда -->
-			<section class="section">
+			<section class="section team">
 				<h2 class="section-title">Наша команда</h2>
 				<ul class="list team-list">
-					<li>
+					<li class="team-bg">
 						<img src="./image/team/team-1.jpg" alt="Фото Игоря Демьяненко" width="270" />
-						<h3 class="title">Игорь Демьяненко</h3>
-						<p class="text" lang="en">Product Designer</p>
+						<h3 class="team-title">Игорь Демьяненко</h3>
+						<p class="team-text" lang="en">Product Designer</p>
 					</li>
-					<li>
+					<li class="team-bg">
 						<img src="./image/team/team-2.jpg" alt="Фото Ольги Репиной" width="270" />
-						<h3 class="title">Ольга Репина</h3>
-						<p class="text" lang="en">Frontend Developer</p>
+						<h3 class="team-title">Ольга Репина</h3>
+						<p class="team-text" lang="en">Frontend Developer</p>
 					</li>
-					<li>
+					<li class="team-bg">
 						<img src="./image/team/team-3.jpg" alt="Фото Николая Тарасова" width="270" />
-						<h3 class="title">Николай Тарасов</h3>
-						<p class="text" lang="en">Marketing</p>
+						<h3 class="team-title">Николай Тарасов</h3>
+						<p class="team-text" lang="en">Marketing</p>
 					</li>
-					<li>
+					<li class="team-bg">
 						<img src="./image/team/team-4.jpg" alt="Фото Михаила Ермакова" width="270" />
-						<h3 class="title">Михаил Ермаков</h3>
-						<p class="text" lang="en">UI Designer</p>
+						<h3 class="team-title">Михаил Ермаков</h3>
+						<p class="team-text" lang="en">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 
 		<!-- Подвал -->
-		<footer>
-			<pre><a href="./index.html" class="logo link" lang="en">
-				<span class="logo-web">Web</span>Studio
-			</a></pre>
+		<footer class="footer">
+			<a href="./index.html" class="logo link" lang="en">
+				<span class="logo-web">Web</span>
+				<span class="logo-footer">Studio</span>
+			</a>
 
-			<address class="f-bar list link">
+			<address class="footer-nav list link">
 				<ul class="list">
 					<li><a href="" class="link address">г. Киев, пр-т Леси Украинки, 26</a></li>
 					<li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
