--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,13 @@
 	</head>
 	<body class="page">
 		<!-- Верхняя лінія -->
+
 		<header class="page-header">
 			<nav>
-				<pre><a href="./index.html" class="logo link" lang="en">
-					<span class="logo-web">Web</span>Studio
-				</a></pre>
+				<a href="./index.html" class="logo link" lang="en">
+					<span class="logo-web">Web</span>
+					<span logo-header>Studio</span>
+				</a>
 
 				<ul class="site-nav list">
 					<li><a href="./index.html" class="link">Студия</a></li>
@@ -37,96 +39,97 @@
 		<main>
 			<!-- Filtr -->
 			<section class="filter">
-				<h3>Фильтр</h3>
-				<!-- <ul class="filter-nav list"> -->
-
-				<button type="button" class="button">Все</button>
-				<button type="button" class="button">Веб-сайты</button>
-				<button type="button" class="button">Приложения</button>
-				<button type="button" class="button">Дизайн</button>
-				<button type="button" class="button">Маркетинг</button>
-				<!-- </ul> -->
-			</section>
-
-			<!-- Примеры работ -->
-			<section>
 				<h1>Примеры работ</h1>
+
+				<ul class="filter-nav list">
+					<li><button type="button" class="button">Все</button></li>
+					<li><button type="button" class="button">Веб-сайты</button></li>
+					<li><button type="button" class="button">Приложения</button></li>
+					<li><button type="button" class="button">Дизайн</button></li>
+					<li><button type="button" class="button">Маркетинг</button></li>
+				</ul>
 
 				<ul class="work-list list">
 					<li>
-						<img src="./image/portfolio/img-4.jpg" alt="Веб-сайт компании Технокряк" width="370" height="295" />
-						<h4 class="title">Технокряк</h4>
-						<p class="text">Веб-сайт</p>
+						<img src="./image/portfolio/work-list-1.jpg" alt="Веб-сайт компании Технокряк" width="370" height="295" />
+						<h2 class="work-list__title">Технокряк</h2>
+						<p class="work-list__text">Веб-сайт</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-5.jpg" alt="Постер с баскетболистами" width="370" height="295" />
-						<h4 class="title">
+						<img src="./image/portfolio/work-list-2.jpg" alt="Постер с баскетболистами" width="370" height="295" />
+						<h2 class="work-list__title">
 							Постер
 							<span lang="en">New Orlean vs Golden Star</span>
-						</h4>
-						<p class="text">Дизайн</p>
+						</h2>
+						<p class="work-list__text">Дизайн</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-6.jpg" alt="Логотип ресторана Seafood" width="370" height="295" />
-						<h4 class="title">
+						<img src="./image/portfolio/work-list-3.jpg" alt="Логотип ресторана Seafood" width="370" height="295" />
+						<h2 class="work-list__title">
 							Ресторан
 							<span lang="en">Seafood</span>
-						</h4>
-						<p class="text">Приложение</p>
+						</h2>
+						<p class="work-list__text">Приложение</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-7.jpg" alt="Фото наушников" width="370" height="295" />
-						<h4 class="title">
+						<img src="./image/portfolio/work-list-4.jpg" alt="Фото наушников" width="370" height="295" />
+						<h2 class="work-list__title">
 							Проект
 							<span lang="en">Prime</span>
-						</h4>
-						<p class="text">Маркетинг</p>
+						</h2>
+						<p class="work-list__text">Маркетинг</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-8.jpg" alt="Фото коробок" width="370" height="295" />
-						<h4 class="title">
+						<img src="./image/portfolio/work-list-5.jpg" alt="Фото коробок" width="370" height="295" />
+						<h2 class="work-list__title">
 							Проект
 							<span lang="en">Boxes</span>
-						</h4>
-						<p class="text">Приложение</p>
+						</h2>
+						<p class="work-list__text">Приложение</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-9.jpg" alt="Фото монитора с открытым сайтом" width="370" height="295" />
-						<h4 class="title" lang="en">Inspiration has no Borders</h4>
-						<p class="text">Веб-сайт</p>
+						<img
+							src="./image/portfolio/work-list-6.jpg"
+							alt="Фото монитора с открытым сайтом"
+							width="370"
+							height="295"
+						/>
+						<h2 class="work-list-title" lang="en">Inspiration has no Borders</h2>
+						<p class="work-list__text">Веб-сайт</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-10.jpg" alt="Журнал Limited Edition" width="370" height="295" />
-						<h4 class="title">
+						<img src="./image/portfolio/work-list-7.jpg" alt="Журнал Limited Edition" width="370" height="295" />
+						<h2 class="work-list__title">
 							Издание
 							<span lang="en">Limited Edition</span>
-						</h4>
-						<p class="text">Дизайн</p>
+						</h2>
+						<p class="work-list__text">Дизайн</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-11.jpg" alt="Ярлык с дизайном логотипа" width="370" height="295" />
-						<h4 class="title">
+						<img src="./image/portfolio/work-list-8.jpg" alt="Ярлык с дизайном логотипа" width="370" height="295" />
+						<h2 class="work-list__title">
 							Проект
 							<span lang="en">LAB</span>
-						</h4>
-						<p class="text">Маркетинг</p>
+						</h2>
+						<p class="work-list__text">Маркетинг</p>
 					</li>
 					<li>
-						<img src="./image/portfolio/img-12.jpg" alt="Работа за ноутбуком" width="370" height="295" />
-						<h4 class="title" lang="en">Growing Business</h4>
-						<p class="text">Приложение</p>
+						<img src="./image/portfolio/work-list-9.jpg" alt="Работа за ноутбуком" width="370" height="295" />
+						<h2 class="work-list__title" lang="en">Growing Business</h2>
+						<p class="work-list__text">Приложение</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 
 		<!-- Подвал -->
-		<footer>
-			<pre><a href="./index.html" class="logo link" lang="en">
-				<span class="logo-web">Web</span>Studio
-			</a></pre>
+		<footer class="footer">
+			<a href="./index.html" class="logo link" lang="en">
+				<span class="logo-web">Web</span>
+				<span class="logo-footer">Studio</span>
+			</a>
 
-			<address class="f-bar list link">
+			<address class="footer-nav list link">
 				<ul class="list">
 					<li><a href="" class="link address">г. Киев, пр-т Леси Украинки, 26</a></li>
 					<li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
