--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<nav>
 				<a href="./index.html" class="logo link" lang="en">
 					<span class="logo-web">Web</span>
-					<span logo-header>Studio</span>
+					<span logo>Studio</span>
 				</a>
 
 				<ul class="site-nav list link">
