--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 			<nav>
 				<a href="./index.html" class="logo link" lang="en">
 					<span class="logo-web">Web</span>
-					<span logo>Studio</span>
+					<span class="logo">Studio</span>
 				</a>
 
 				<ul class="site-nav list">
