--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 		<header class="page-header">
 			<nav>
 				<a href="./index.html" class="logo link" lang="en">
-					<span class="logo-web">Web</span>
-					<span class="logo">Studio</span>
+					Web
+					<span class="logo-header">Studio</span>
 				</a>
 
-				<ul class="site-nav list link">
-					<li><a href="./index.html" class="link current">Студия</a></li>
-					<li><a href="./portfolio.html" class="link">Портфолио</a></li>
-					<li><a href="" class="link">Контакты</a></li>
+				<ul class="nav list link">
+					<li><a href="./index.html" class="nav-link link current">Студия</a></li>
+					<li><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
+					<li><a href="" class="nav-link link">Контакты</a></li>
 				</ul>
 			</nav>
 
-			<ul class="auth-nav list link">
-				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+			<ul class="nav list link">
+				<li><a href="mailto:info@devstudio.com" class="nav-link link">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="nav-link link">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 
@@ -117,15 +117,15 @@
 		<!-- Подвал -->
 		<footer class="footer">
 			<a href="./index.html" class="logo link" lang="en">
-				<span class="logo-web">Web</span>
+				Web
 				<span class="logo-footer">Studio</span>
 			</a>
 
 			<address class="footer-nav list link">
 				<ul class="list">
-					<li><a href="" class="link address">г. Киев, пр-т Леси Украинки, 26</a></li>
-					<li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
+					<li><a href="" class="footer-nav-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
+					<li><a href="mailto:info@devstudio.com" class="footer-nav-contacts link">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="footer-nav-contacts link">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
