--- a/portfolio.html
+++ b/portfolio.html
@@ -18,20 +18,20 @@
 		<header class="page-header">
 			<nav>
 				<a href="./index.html" class="logo link" lang="en">
-					<span class="logo-web">Web</span>
-					<span class="logo">Studio</span>
+					Web
+					<span class="logo-header">Studio</span>
 				</a>
 
-				<ul class="site-nav list">
-					<li><a href="./index.html" class="link">Студия</a></li>
-					<li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-					<li><a href="" class="link">Контакты</a></li>
+				<ul class="nav list link">
+					<li><a href="./index.html" class="nav-link link">Студия</a></li>
+					<li><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
+					<li><a href="" class="nav-link link">Контакты</a></li>
 				</ul>
 			</nav>
 
-			<ul class="auth-nav list">
-				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+			<ul class="nav list link">
+				<li><a href="mailto:info@devstudio.com" class="nav-link link">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="nav-link link">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 
@@ -49,43 +49,43 @@
 					<li><button type="button" class="button">Маркетинг</button></li>
 				</ul>
 
-				<ul class="work-list list">
+				<ul class="portfolio list">
 					<li>
 						<img src="./image/portfolio/work-list-1.jpg" alt="Веб-сайт компании Технокряк" width="370" height="295" />
-						<h2 class="work-list__title">Технокряк</h2>
-						<p class="work-list__text">Веб-сайт</p>
+						<h2 class="portfolio-title">Технокряк</h2>
+						<p class="portfolio-text">Веб-сайт</p>
 					</li>
 					<li>
 						<img src="./image/portfolio/work-list-2.jpg" alt="Постер с баскетболистами" width="370" height="295" />
-						<h2 class="work-list__title">
+						<h2 class="portfolio-title">
 							Постер
 							<span lang="en">New Orlean vs Golden Star</span>
 						</h2>
-						<p class="work-list__text">Дизайн</p>
+						<p class="portfolio-text">Дизайн</p>
 					</li>
 					<li>
 						<img src="./image/portfolio/work-list-3.jpg" alt="Логотип ресторана Seafood" width="370" height="295" />
-						<h2 class="work-list__title">
+						<h2 class="portfolio-title">
 							Ресторан
 							<span lang="en">Seafood</span>
 						</h2>
-						<p class="work-list__text">Приложение</p>
+						<p class="portfolio-text">Приложение</p>
 					</li>
 					<li>
 						<img src="./image/portfolio/work-list-4.jpg" alt="Фото наушников" width="370" height="295" />
-						<h2 class="work-list__title">
+						<h2 class="portfolio-title">
 							Проект
 							<span lang="en">Prime</span>
 						</h2>
-						<p class="work-list__text">Маркетинг</p>
+						<p class="portfolio-text">Маркетинг</p>
 					</li>
 					<li>
 						<img src="./image/portfolio/work-list-5.jpg" alt="Фото коробок" width="370" height="295" />
-						<h2 class="work-list__title">
+						<h2 class="portfolio-title">
 							Проект
 							<span lang="en">Boxes</span>
 						</h2>
-						<p class="work-list__text">Приложение</p>
+						<p class="portfolio-text">Приложение</p>
 					</li>
 					<li>
 						<img
@@ -94,29 +94,29 @@
 							width="370"
 							height="295"
 						/>
-						<h2 class="work-list-title" lang="en">Inspiration has no Borders</h2>
-						<p class="work-list__text">Веб-сайт</p>
+						<h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
+						<p class="portfolio-text">Веб-сайт</p>
 					</li>
 					<li>
 						<img src="./image/portfolio/work-list-7.jpg" alt="Журнал Limited Edition" width="370" height="295" />
-						<h2 class="work-list__title">
+						<h2 class="portfolio-title">
 							Издание
 							<span lang="en">Limited Edition</span>
 						</h2>
-						<p class="work-list__text">Дизайн</p>
+						<p class="portfolio-text">Дизайн</p>
 					</li>
 					<li>
 						<img src="./image/portfolio/work-list-8.jpg" alt="Ярлык с дизайном логотипа" width="370" height="295" />
-						<h2 class="work-list__title">
+						<h2 class="portfolio-title">
 							Проект
 							<span lang="en">LAB</span>
 						</h2>
-						<p class="work-list__text">Маркетинг</p>
+						<p class="portfolio-text">Маркетинг</p>
 					</li>
 					<li>
 						<img src="./image/portfolio/work-list-9.jpg" alt="Работа за ноутбуком" width="370" height="295" />
-						<h2 class="work-list__title" lang="en">Growing Business</h2>
-						<p class="work-list__text">Приложение</p>
+						<h2 class="portfolio-title" lang="en">Growing Business</h2>
+						<p class="portfolio-text">Приложение</p>
 					</li>
 				</ul>
 			</section>
@@ -125,15 +125,15 @@
 		<!-- Подвал -->
 		<footer class="footer">
 			<a href="./index.html" class="logo link" lang="en">
-				<span class="logo-web">Web</span>
+				Web
 				<span class="logo-footer">Studio</span>
 			</a>
 
 			<address class="footer-nav list link">
 				<ul class="list">
-					<li><a href="" class="link address">г. Киев, пр-т Леси Украинки, 26</a></li>
-					<li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
+					<li><a href="" class="footer-nav-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
+					<li><a href="mailto:info@devstudio.com" class="footer-nav-contacts link">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="footer-nav-contacts link">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
