--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			</nav>
 
 			<ul class="nav list link">
-				<li><a href="mailto:info@devstudio.com" class="nav-link link">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111" class="nav-link link">+38 096 111 11 11</a></li>
+				<li><a href="mailto:info@devstudio.com" class="auth-nav-link link">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="auth-nav-link link">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 
